Fix: XSS vulnerability in the translate helper method in Ruby on Rails

--- a/actionpack/test/fixtures/test/array_translation.erb
+++ b/actionpack/test/fixtures/test/array_translation.erb
@@ -1,1 +1,1 @@
-<% translation = t(['foo', 'bar', 'baz_html']) %><%= translation.first %>, <%= translation.second %>, <%= translation.third %>
+<% translation = t(['translations.hello', 'translations.html', 'translations.hello_html']) %><%= translation.first %>, <%= translation.second %>, <%= translation.third %>
